@@ -7,7 +7,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: wm.test,v 1.48 2010/01/19 01:27:41 patthoyts Exp $
+# RCS: @(#) $Id: wm.test,v 1.49 2010/05/26 10:58:14 nijtmans Exp $
 
 # This file tests window manager interactions that work across platforms.
 # Window manager tests that only work on a specific platform should be placed
@@ -643,16 +643,16 @@ test wm-geometry-1.3 {usage} -returnCodes error -body {
     wm geometry . bogus
 } -result {bad geometry specifier "bogus"}
 
-test wm-geometry-2.1 {setting values} -setup {
-    set result {}
-} -body {
+test wm-geometry-2.1 {setting values} -body {
     wm geometry .t 150x150+50+50
     update
-    lappend result [wm geometry .t]
+    set result [wm geometry .t]
     wm geometry .t {}
     update
-    lappend result [string equal [wm geometry .t] "150x150+50+50"]
-} -result [list 150x150+50+50 0]
+    return [list $result [string equal [wm geometry .t] $result]]
+} -cleanup {
+    unset result
+} -match glob -result [list 150x150+*+* 0]
 
 
 ### wm grid ###
@@ -1356,6 +1356,7 @@ test wm-stackorder-2.3 {stacking order} -body {
     toplevel .t ; update
     toplevel .t2 ; update
     raise .
+    raiseDelay
     raise .t2
     raiseDelay
     wm stackorder .
@@ -1706,6 +1707,7 @@ test wm-transient-4.1 {transient toplevel is withdrawn
 test wm-transient-4.2 {already mapped transient toplevel
         is withdrawn if master is iconic} -body {
     toplevel .master
+    raiseDelay
     wm iconify .master
     update
     toplevel .subject
